# edirstat

./: .gitignore  CHANGELOG.md  CNAME  Cargo.toml  README.md  about.toml  build.rs  index.html  installer.iss  licenses-md.hbs  robots.txt  rust-toolchain.toml  sitemap.xml  sws.toml  typos.toml
.github/workflows/: ci.yml  deploy-web.yml  release.yml
assets/: MGS3.edst.zst  main.css  main.js
assets/licenses/: linux.md  macos.md  web.md  windows.md
assets/locales/de-DE/: main.ftl
assets/locales/en-US/: main.ftl
assets/locales/es-ES/: main.ftl
assets/locales/fr-FR/: main.ftl
assets/locales/it-IT/: main.ftl
assets/locales/nl-NL/: main.ftl
assets/locales/pl-PL/: main.ftl
assets/locales/pt-PT/: main.ftl
crates/edirstat/: Cargo.toml  LICENSE  README.md  build.rs
crates/edirstat-core/: Cargo.toml
crates/edirstat-core/src/: arena.rs  error.rs  file_id.rs  lib.rs  snapshot.rs  state.rs  time_utils.rs
crates/edirstat-gui/: Cargo.toml  build.rs  index.html
crates/edirstat-gui/src/: lib.rs  preferences.rs
crates/edirstat-gui/src/gui/: deduplicator.rs  explorer.rs  extensions.rs  mod.rs  modals.rs  operations.rs
crates/edirstat-gui/src/stats/: deduplicator.rs  duplicate_waste.rs  extension_boxplot.rs  mod.rs  scatter_plot.rs  size_distribution.rs  temporal_timeline.rs  treemap.rs
crates/edirstat/benches/: compare.rs  mft_bench.rs
crates/edirstat/src/: lib.rs
crates/edirstat/src/engine/: coordinator.rs  mft.rs  mod.rs  scanner.rs  traversal.rs
crates/edirstat/tests/: gui_scan.rs
runner/: Cargo.toml  build.rs
scripts/: build_local_multivers.sh  build_web.sh  generate_feature_manifest.sh  generate_licenses.sh  run_web.sh
src/: arena.rs  coordinator.rs  error.rs  gui.rs  lib.rs  persistence.rs  traversal.rs
src/engine/: coordinator.rs  mft.rs  mod.rs  traversal.rs
src/gui/: deduplicator.rs  deduplicator_tab.rs  explorer.rs  extensions.rs  mod.rs  modals.rs  operations.rs  theme.rs
src/model/: arena.rs  persistence.rs  time_utils.rs  varint.rs
src/model/persistence/: mod.rs  preferences.rs  snapshot.rs
src/stats/: deduplicator.rs  dir_composition.rs  duplicate_waste.rs  extension_boxplot.rs  mod.rs  scatter_plot.rs  size_distribution.rs  temporal_timeline.rs  treemap.rs
web/: config.toml  copy-assets.js  package-lock.json  package.json  robots.txt
web/src/: main.js  style.css
web/templates/: base.html  index.html
