[package]
name = "edirstat"
description = "A fast, cross-platform disk usage analyzer with work-stealing multithreading, zero-copy snapshots, deduplication, and an interactive treemap GUI."
version = "2.0.0"
edition = "2024"
license = "MIT"
documentation = "https://docs.rs/edirstat"
repository = "https://github.com/xangelix/edirstat"
authors = ["Cody Wyatt Neiman (xangelix) <neiman@cody.to>"]
categories = [
    "gui",
    "filesystem",
    "visualization",
    "concurrency",
    "memory-management",
]
keywords = ["disk-usage", "treemap", "egui", "dirstat", "zero-copy"]

include = [
    "/Cargo.toml",
    "/src/**/*",
    "/assets/licenses/**/*",
    "/assets/img/icon.ico",
    "/assets/img/icon_512x.png",
    "/assets/img/logo-nosubtext-transparent.svg",
    "/assets/img/icon-transparent.svg",
    "/build.rs",
    "/LICENSE",
    "/README.md",
]

[features]
default = ["online"]
online = ["reqwest", "egui-async", "semver"]
profile-tracy = ["tracy-client"]

[dependencies]
ahash = "0.8.12"
anyhow = "1.0.102"
arc-swap = "1.9.1"
atomic-progress = { version = "0.1.5", default-features = false, features = [
    "prettier-bytes",
] }
blake3 = "1.8.5"
bytemuck = { version = "1.25.0", features = ["derive"] }
clap = { version = "4.6.1", features = ["derive"] }
cli-or-gui = "0.1.1"
compact_str = "0.9.1"
crc-fast = "1.10.0"
crossbeam = "0.8.4"
eframe = "0.34.3"
egui-notify = "0.22.0"
egui-table-kit = "0.2.1"
egui_extras = { version = "0.34.3", features = ["svg_text"] }
egui_plot = "0.35.0"
include_packed = "0.1.6"
mimalloc-rspack = { version = "0.2.4", features = ["v3"] }
open = "5.3.5"
parking_lot = { version = "0.12.5", features = ["hardware-lock-elision"] }
prettier-bytes = "0.2.1"
rayon = "1.12.0"
regex = { version = "1.12.4", features = ["use_std"] }
rfd = "0.17.2"
smallvec = "1.15.2"
thiserror = "2.0.18"
trash = "5.2.6"
xgx_intern = "0.6.3"
zstd = "0.13.3"

# feature: online
egui-async = { version = "0.4", optional = true }
reqwest = { version = "0.13", features = [
    "rustls",
], default-features = false, optional = true }
semver = { version = "1", optional = true }

# feature: profile-tracy
tracy-client = { version = "0.18.4", optional = true }
sysinfo = { version = "0.39.4", default-features = false, features = ["disk"] }

[target.'cfg(target_family = "unix")'.dependencies]
uzers = "0.12.2"

[build-dependencies]
include_packed = { version = "0.1.6", features = ["build"] }
winresource = "0.1.31"

[profile.release]
panic = "abort"
strip = true
lto = "thin"
# debug = true
codegen-units = 1

[[bin]]
name = "edirstat"
path = "src/bin/edirstat.rs"

[[bench]]
name = "compare"
harness = false
path = "benches/compare.rs"

[[bench]]
name = "mft_bench"
harness = false

[dev-dependencies]
criterion = "0.8.2"
