[package]
name = "edirstat"
description = "A fast, cross-platform disk usage analyzer and deduplicator—with work-stealing multithreading, zero-copy snapshots, and an interactive treemap GUI."
version = "2.0.1"
edition = "2024"
license = "MIT"
documentation = "https://docs.rs/edirstat"
repository = "https://github.com/xangelix/edirstat"
authors = ["Cody Wyatt Neiman (xangelix) <neiman@cody.to>"]
categories = [
    "gui",
    "filesystem",
    "visualization",
    "concurrency",
    "memory-management",
]
keywords = ["disk-usage", "treemap", "egui", "dirstat", "zero-copy"]

include = [
    "/Cargo.toml",
    "/src/**/*",
    "/assets/licenses/**/*",
    "/assets/img/icon.ico",
    "/assets/img/icon_512x.png",
    "/assets/img/logo-nosubtext-transparent.svg",
    "/assets/img/icon-transparent.svg",
    "/build.rs",
    "/LICENSE",
    "/README.md",
]

[features]
default = ["online"]
online = ["reqwest", "egui-async", "semver"]
profile-tracy = ["tracy-client"]

[dependencies]
ahash = "0.8.12"
anyhow = "1.0.103"
arc-swap = "1.9.2"
atomic-progress = { version = "0.1.6", default-features = false, features = [
    "prettier-bytes",
] }
blake3 = "1.8.5"
bytemuck = { version = "1.25.1", features = ["derive"] }
chrono = "0.4.45"
clap = { version = "4.6.2", features = ["derive"] }
cli-or-gui = "0.1.1"
compact_str = "0.10.0"
crc-fast = "1.10.0"
crossbeam = "0.8.4"
directories = "6.0.0"
eframe = "0.35.0"
egui-notify = { version = "0.22.0", git = "https://github.com/xangelix/egui-notify.git", branch = "egui-0.35" }
egui-table-kit = "0.5.3"
egui_extras = { version = "0.35.0", features = ["svg_text"] }
egui_plot = "0.36.0"
fixedbitset = "0.5.7"
fluent-zero = "0.1.4"
include_packed = "0.1.6"
mimalloc-rspack = { version = "0.2.4", features = ["v3"] }
open = "5.4.0"
parking_lot = { version = "0.12.5", features = ["hardware-lock-elision"] }
prettier-bytes = "0.2.1"
rayon = "1.12.0"
regex = { version = "1.13.1", features = ["use_std"] }
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
smallvec = "1.15.2"
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.18"
toml = "1.1.3"
trash = "5.2.6"
xgx_intern = "0.6.4"
zstd = "0.13.3"

# feature: online
egui-async = { version = "0.5", optional = true }
reqwest = { version = "0.13", features = [
    "rustls",
], default-features = false, optional = true }
semver = { version = "1", optional = true }

# feature: profile-tracy
tracy-client = { version = "0.18.4", optional = true }
sysinfo = { version = "0.39.6", default-features = false, features = ["disk"] }

[target.'cfg(target_family = "unix")'.dependencies]
uzers = "0.12.2"

[build-dependencies]
fluent-zero-build = "0.1.4"
include_packed = { version = "0.1.6", features = ["build"] }
winresource = "0.1.31"

[profile.release]
panic = "abort"
strip = true
lto = "thin"
# debug = true
codegen-units = 1

[[bin]]
name = "edirstat"
path = "src/bin/edirstat.rs"

[[bench]]
name = "compare"
harness = false
path = "benches/compare.rs"

[[bench]]
name = "mft_bench"
harness = false

[dev-dependencies]
criterion = "0.8.2"
