[workspace]
resolver = "3"
members = ["crates/*"]
default-members = ["crates/edirstat"]

[workspace.package]
version = "2.0.1"
edition = "2024"
license = "MIT"
authors = ["Cody Wyatt Neiman (xangelix) <neiman@cody.to>"]
repository = "https://github.com/xangelix/edirstat"


[profile.release]
panic = "abort"
strip = true
lto = "thin"
# debug = true
codegen-units = 1
