[package]
name = "edirstat-core"
description = "Core data model and snapshot format for eDirStat."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[package.metadata.cargo-shear]
ignored = ["getrandom"]

[dependencies]
ahash = "0.8.12"
arc-swap = "1.9.2"
bytemuck = { version = "1.25.1", features = ["derive"] }
chrono = "0.4.45"
compact_str = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
xgx_intern = "0.6.4"
zstd = "0.13.3"

# ahash's runtime-rng pulls in getrandom, which needs the wasm_js backend on
# wasm32-unknown-unknown
[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "=0.3", features = ["wasm_js"] }
